# cattle_weight_regression

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
configs/: data.yaml  evaluation.yaml  features.yaml
configs/models/: resnet18.yaml  resnet18_multiview.yaml  resnet34.yaml  resnet34_multiview.yaml  resnet50.yaml  resnet50_multiview.yaml  yolo11.yaml  yolo26.yaml
docs/: index.md
docs/eda/: index.md
docs/experiments/: index.md
docs/usage/: getting_started.md  training.md
notebooks/: 01_eda.ipynb  02_predictions_per_angle.ipynb
scripts/: evaluate.py  prepare_data.py  train.py
src/cattle_weight_regression/: cli.py  config.py
src/cattle_weight_regression/data/: dataset.py  loader.py  transforms.py
src/cattle_weight_regression/evaluation/: metrics.py  visualisation.py
src/cattle_weight_regression/features/: extraction.py
src/cattle_weight_regression/models/: base.py  yolo.py
src/cattle_weight_regression/models/pytorch/: cnn.py
src/cattle_weight_regression/training/: trainer.py
src/cattle_weight_regression/utils/: logging.py  mlflow_utils.py  seed.py
tests/: conftest.py
tests/unit/: test_loader.py  test_metrics.py
