[project]
name = "cattle-weight-regression"
version = "0.1.0"
description = "Estimating the weight of individual cattle from images"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ultralytics>=8.0.0",
    "mlflow>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.68.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "mkdocs-material>=9.0.0",
]

[project.scripts]
cattle-weight = "cattle_weight_regression.cli:main"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/cattle_weight_regression --cov-report=term-missing -q"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = { index = "pytorch-cu132" }
torchvision = { index = "pytorch-cu132" }

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
